--- a/src/index.css
+++ b/src/index.css
@@ -44,771 +44,37 @@ body {
   background: #fe3b7d;
 }
 
-/*Portfolio copy*/
-/* Light Body */
-body {
-  height: calc(100vh - 8em);
-  background-color: rgb(255, 255, 255);
-  transition: 1s;
-  overflow-x: hidden;
-}
-
-i.icon {
-  color: rgb(25, 25, 25);
-  transition: 1s;
-}
-
-.icon-disabled {
-  color: rgba(25, 25, 25, 0.5);
-  cursor: not-allowed;
-  transition: 1s;
-}
-
-i.icon-button {
-  color: rgb(255, 255, 255);
-  transition: 1s;
-}
-
-/* Filter form */
-.form-control {
-  background-color: rgb(255, 255, 255);
-  color: rgb(25, 25, 25);
-  transition: 1s;
-}
-
-.form-control:focus {
-  border-color: rgb(25, 25, 25);
-  box-shadow: none;
-}
-
-.form-control option {
-  margin-top: 100px;
-}
-
-#search::placeholder {
-  color: rgb(200, 200, 200);
-  opacity: 1;
-}
-
-/* Light Back to Top Button */
-.top-button {
-  border: 2px solid rgb(255, 255, 255);
-  position: fixed;
-  bottom: 1em;
-  right: 1em;
-  width: 3.75em;
-  padding: 1em;
-  color: rgb(255, 255, 255);
-  background-color: rgb(25, 25, 25);
-  border-radius: 100%;
-  cursor: pointer;
-  transition: 1s;
-  z-index: 100;
-}
-
-.top-button:hover {
-  transform: scale(1.25) translateY(-10px);
-}
-
-/* Light Button */
-.theme-button {
-  border: 2px solid rgb(255, 255, 255);
-  top: 1em;
-  left: 1em;
-  position: fixed;
-  width: 3.75em;
-  padding: 1em;
-  color: rgb(255, 255, 255);
-  background-color: rgb(25, 25, 25);
-  border-radius: 100%;
-  cursor: pointer;
-  transition: 1s;
-  z-index: 100;
-}
-
-.theme-button:hover {
-  transform: scale(1.25) translate(-1px, -2px) rotate(-10deg);
-}
-/* No Styling Light Button */
-.clear-button {
-  position: absolute;
-  bottom: 3em;
-  left: 0;
-  right: 0;
-  border: 0;
-  background-color: transparent;
-  cursor: pointer;
-  color: rgb(25, 25, 25);
-}
-
-.clear-button:hover {
-  transform: scale(1.25);
-  animation: shake 0.75s;
-  animation-iteration-count: infinite;
-}
-
-/* Bouncing arrow */
-.bounce {
-  animation: bounce 0.5s;
-  animation-direction: alternate;
-  animation-timing-function: cubic-bezier(0.5, 0.05, 1, 0.5);
-  animation-iteration-count: infinite;
-}
-
-@keyframes bounce {
-  from {
-    transform: translate3d(0, 2px, 0);
-  }
-  to {
-    transform: translate3d(0, 20px, 0);
-  }
-}
-
-@-webkit-keyframes bounce {
-  from {
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-  }
-  to {
-    -webkit-transform: translate3d(0, 200px, 0);
-    transform: translate3d(0, 200px, 0);
-  }
-}
-
-@keyframes shake {
-  0% {
-    transform: translate(1px, 1px) rotate(0deg);
-  }
-  10% {
-    transform: translate(-1px, -2px) rotate(-1deg);
-  }
-  20% {
-    transform: translate(-3px, 0px) rotate(1deg);
-  }
-  30% {
-    transform: translate(3px, 2px) rotate(0deg);
-  }
-  40% {
-    transform: translate(1px, -1px) rotate(1deg);
-  }
-  50% {
-    transform: translate(-1px, 2px) rotate(-1deg);
-  }
-  60% {
-    transform: translate(-3px, 1px) rotate(0deg);
-  }
-  70% {
-    transform: translate(3px, 1px) rotate(-1deg);
-  }
-  80% {
-    transform: translate(-1px, -1px) rotate(1deg);
-  }
-  90% {
-    transform: translate(1px, 2px) rotate(0deg);
-  }
-  100% {
-    transform: translate(1px, -2px) rotate(-1deg);
-  }
-}
-
-/* Full Page */
-.full-page {
+.position-relative {
   position: relative;
-  height: 100vh;
 }
 
-/* Text */
-.top-padding {
-  padding-top: 20px;
+/* Navbar */
+.navbar {
+  height: 75px;
+  border-bottom-right-radius: 20px;
+  border-bottom-left-radius: 20px;
 }
 
-.bottom-padding {
-  padding-bottom: 20px;
-}
-
-.no-top-margin {
-  margin-top: 0;
-}
-
-.no-bottom-margin {
-  margin-bottom: 0;
-}
-
-.center-text {
-  text-align: center;
-}
-
-.text-right {
-  text-align: right;
-}
-
-.text-left {
-  text-align: left;
-}
-
-.big-title {
-  font-size: 65px;
-}
-
-.big-subtitle {
-  font-size: 30px;
-}
-
-.big-project-title {
-  font-size: 29px;
-}
-
-/* Contact Link Buttons */
-.contact-link {
-  border: 0;
-  width: 3.75em;
-  padding: 1em;
-  color: rgb(255, 255, 255);
-  background-color: rgb(25, 25, 25);
-  border-radius: 100%;
-  cursor: pointer;
-  transition: 1s;
-  margin: 20px;
-}
-
-.contact-button:hover button {
-  transform: scale(1.25);
-}
-
-.line-1 {
-  width: 100%;
-  margin: 0 auto;
-  margin-top: 40px;
-  border-right: 2px solid rgb(255, 255, 255);
-  white-space: nowrap;
-  overflow: hidden;
-}
-
-@media (max-width: 550px) {
-  .big-title {
-    font-size: 40px;
-  }
-
-  .line-1 {
-    width: 100%;
-    font-size: 18px;
-    margin: 0 auto;
-    margin-top: 40px;
-    border-right: 2px solid rgb(255, 255, 255);
-    white-space: nowrap;
-    overflow: hidden;
-  }
-}
-
-/* Tag Button */
-.tag {
-  position: relative;
-  margin-top: 5px;
-  margin-right: 5px;
-  border: 0;
-  padding: 0.6em;
-  background-color: rgb(25, 25, 25);
-  color: rgb(255, 255, 255);
-  font-size: 15px;
-  border-radius: 25px;
-  transition: 1s;
-}
-
-.tag:hover {
-  cursor: help;
-}
-
-.vl {
-  background-color: transparent;
-  border: 0;
-  font-weight: bold;
-  height: 1em;
-  padding-left: -12px;
-  margin-right: 5px;
-}
-
-.tag .tooltiptext {
-  visibility: hidden;
-  width: 120px;
-  background-color: rgb(25, 25, 25);
-  color: rgb(255, 255, 255);
-  text-align: center;
-  border-radius: 6px;
-  padding: 5px 0;
+.language-dropdown {
   position: absolute;
   z-index: 1;
-  bottom: 112%;
-  left: 50%;
-  margin-left: -60px;
-  opacity: 0;
-  transform: translateY(8px) rotate(0deg);
-  transition: 0.5s;
+  padding-right: 5px;
+  padding-left: 10px;
+  margin-top: 20px;
+  border-bottom-right-radius: 20px;
+  border-bottom-left-radius: 20px;
 }
 
-.tag .tooltiptext::after {
-  content: "";
-  position: absolute;
-  top: 100%;
-  left: 50%;
-  margin-left: -5px;
-  border-width: 5px;
-  border-style: solid;
-  border-color: rgb(25, 25, 25) transparent transparent transparent;
+.logo {
+  width: 150px;
+  margin-top: 75px;
+  border: 5px solid #f9f4fa;
+  border-radius: 50%;
+  user-select: none;
 }
 
-.tag:hover .tooltiptext {
-  transform: translateY(0px) rotate(0deg);
-  opacity: 1;
-  visibility: visible;
-}
-
-/* Source Code Button */
-a.source-code {
-  color: rgb(25, 25, 25);
-  transition: 1s;
-}
-
-a.source-code:hover i {
-  transition: 1s;
-  transform: scale(1.25) rotate(-360deg);
-  cursor: pointer;
-}
-
-/* Projects */
-.flex-row-reverse {
-  flex-direction: row-reverse;
-}
-
-.category-container {
-  margin: 50px 0;
-}
-
-.content-left {
-  justify-content: left;
-  align-items: left;
-}
-
-.content-right {
-  justify-content: right;
-  align-items: right;
-}
-
-.content-center {
-  justify-content: center;
-  align-items: center;
-}
-
-.category-button {
+/* Activity details */
+.map {
   width: 100%;
-  height: 25vh;
-  border: 0;
-  color: rgb(255, 255, 255);
-  background-color: rgb(25, 25, 25);
-  box-shadow: 3px 3px 10px rgb(25, 25, 25);
-  border-radius: 25px;
-  cursor: pointer;
-  transition: 1s;
-  margin-right: 10px;
-  margin-bottom: 10px;
-  position: relative;
-  overflow: hidden;
-  transition: transform 0.3s;
-}
-
-.category-button::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-size: cover;
-  background-position: center;
-  opacity: 0;
-  transition: opacity 0.5s ease-in;
-}
-
-.category-button:hover {
-  transform: scale(1.05);
-  transition: 2s;
-}
-
-.category-button:hover::before {
-  opacity: 1;
-}
-
-.discover {
-  color: rgb(25, 25, 25);
-  margin: 0 0.25rem;
-  padding: 0 0.25rem;
-  margin-bottom: 65px;
-  width: auto;
-  font-size: 1.5rem;
-  transition: color 0.5s ease-in-out, box-shadow 0.5s ease-in-out;
-  text-decoration: none;
-}
-
-.discover:hover {
-  box-shadow: inset 1000px 0 0 0 rgb(25, 25, 25);
-  color: rgb(255, 255, 255);
-  cursor: pointer;
-}
-
-.year-line {
-  width: 50%;
-  margin: 0 auto;
-}
-
-.collapsable {
-  background-color: transparent;
-  border: none;
-  color: rgb(25, 25, 25);
-  transition: 1s;
-}
-
-.collapsable:hover {
-  scale: 1.2;
-}
-
-@keyframes bounce2 {
-  from {
-    transform: translate3d(0, 0, 0);
-  }
-  to {
-    transform: translate3d(0, 2px, 0);
-  }
-}
-
-@-webkit-keyframes bounce2 {
-  from {
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-  }
-  to {
-    -webkit-transform: translate3d(0, 20px, 0);
-    transform: translate3d(0, 20px, 0);
-  }
-}
-
-.center-div {
-  margin: auto;
-  width: 100%;
-}
-
-.project-description {
-  margin-right: 5%;
-}
-
-.content {
-  margin-right: 20px;
-}
-
-.read-more {
-  color: rgb(25, 25, 25);
-  text-decoration: none;
-  transition: 1s;
-  display: inline-block;
-  position: relative;
-}
-
-a.read-more:hover {
-  color: rgb(25, 25, 25);
-  cursor: pointer;
-  transform: scale(1.1) translateX(3px);
-}
-
-.read-more::after {
-  content: "";
-  position: absolute;
-  width: 100%;
-  transform: scaleX(0);
-  height: 2px;
-  bottom: 0;
-  left: 0;
-  background-color: rgb(25, 25, 25);
-  transform-origin: bottom right;
-  transition: transform 0.25s ease-out;
-}
-
-.read-more:hover::after {
-  transform: scaleX(1);
-  transform-origin: bottom left;
-}
-
-.project-image {
-  border-radius: 10px;
-  transition: 1s;
-  margin-right: 5%;
-  margin-bottom: 10px;
-  width: 100%;
-  box-shadow: 3px 7px 10px rgb(25, 25, 25);
-}
-
-.project-image:hover {
-  transform: scale(1.05);
-}
-
-/* Modal */
-.modalheader {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 20px;
-}
-
-.entire-modal {
-  margin: auto;
-  color: rgb(25, 25, 25);
-  background-color: rgb(255, 255, 255);
-  padding: 40px;
-}
-
-.modalbody {
-  margin: 0 auto;
-}
-
-.close-modal {
-  right: 1em;
-  background-color: transparent;
-  border: none;
-  color: rgb(25, 25, 25);
-}
-
-/* Animation */
-.anim-typewriter {
-  animation: typewriter 4s steps(44) 1s 1 normal both, blinkTextCursor 750ms steps(44) infinite normal;
-}
-
-@keyframes typewriter {
-  from {
-    width: 0;
-  }
-  to {
-    width: 18.1em;
-  }
-}
-
-@keyframes blinkTextCursor {
-  from {
-    border-right-color: currentColor;
-  }
-  to {
-    border-right-color: transparent;
-  }
-}
-
-/* Footer */
-.footer-link {
-  border: 0;
-  width: 3.75em;
-  padding: 1em;
-  color: rgb(255, 255, 255);
-  background-color: rgb(25, 25, 25);
-  border-radius: 100%;
-  cursor: pointer;
-  transition: 1s;
-  margin-right: 20px;
-  margin-top: 5px;
-}
-
-.contact-footer-button:hover button {
-  transform: scale(1.1);
-}
-
-/* Games */
-.color-white {
-  color: rgb(255, 255, 255);
-}
-
-.flipped-icon {
-  transform: scaleX(-1);
-}
-
-.falling-icon {
-  opacity: 0;
-  color: gold;
-}
-
-.win .falling-icon {
-  animation: fadeIn 0.5s forwards, crowned 0.5s 0.5s forwards;
-}
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes crowned {
-  from {
-    transform: translateY(0);
-  }
-  to {
-    transform: translateY(15px);
-  }
-}
-
-.tied1 {
-  animation: shake1 0.5s;
-}
-
-.tied2 {
-  animation: shake2 0.5s;
-}
-
-@keyframes shake1 {
-  0% {
-    transform: translateY(0);
-  }
-  25% {
-    transform: translateY(-10px);
-  }
-  50% {
-    transform: translateY(10px);
-  }
-  75% {
-    transform: translateY(-10px);
-  }
-  100% {
-    transform: translateY(0);
-  }
-}
-
-@keyframes shake2 {
-  0% {
-    transform: translateX(0);
-  }
-  25% {
-    transform: translateX(-10px);
-  }
-  50% {
-    transform: translateX(10px);
-  }
-  75% {
-    transform: translateX(-10px);
-  }
-  100% {
-    transform: translateX(0);
-  }
-}
-
-.paperPlaneLose1 {
-  animation: flyAway1 2s forwards;
-}
-
-@keyframes flyAway1 {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(-25px);
-  }
-  100% {
-    transform: translate(1000px, -500px) scale(0);
-  }
-}
-
-.paperPlaneLose2 {
-  animation: flyAway2 2s forwards;
-}
-
-@keyframes flyAway2 {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(-25px);
-  }
-  100% {
-    transform: translate(-1000px, -500px) scale(0);
-  }
-}
-
-.gemLose {
-  animation: shakeAndDisappear 2s forwards;
-}
-
-@keyframes shakeAndDisappear {
-  0%,
-  100% {
-    transform: scale(1);
-    color: initial;
-  }
-  10%,
-  30% {
-    transform: scale(1.5) rotate(30deg);
-    color: red;
-  }
-  20%,
-  40% {
-    transform: scale(1.5) rotate(-30deg);
-    color: red;
-  }
-  100% {
-    transform: scale(0);
-    opacity: 0;
-  }
-}
-
-.scissorsLose {
-  animation: split 2s forwards;
-}
-
-@keyframes split {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(-25px);
-  }
-  100% {
-    transform: rotate(-180deg);
-    color: red;
-  }
-}
-
-.game-button,
-.game-button-disabled {
-  width: 100%;
-  height: 5em;
-  border: 0;
-  color: rgb(255, 255, 255);
-  box-shadow: 3px 3px 10px rgb(25, 25, 25);
-  border-radius: 25px;
-  cursor: pointer;
-  transition: 1s;
-  margin: 10px;
-  position: relative;
-  overflow: hidden;
-}
-
-.game-button {
-  background-color: rgb(25, 25, 25);
-  transition: transform 0.3s;
-}
-
-.game-button-disabled {
-  background-color: rgb(100, 100, 100);
-  cursor: not-allowed !important;
-}
-
-.game-button::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-size: cover;
-  background-position: center;
-  opacity: 0;
-  transition: opacity 0.5s ease-in;
-}
-
-.game-button:hover {
-  transform: scale(1.05);
-  transition: 2s;
+  height: 400px;
 }
