--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,10 @@ body {
   background-color: var(--white);
 }
 
+.content {
+  margin-top: 100px;
+}
+
 .txt-hoge-vucht {
   color: var(--accent);
 }
@@ -48,6 +52,7 @@ a {
 a:hover {
   text-decoration: underline;
   color: var(--background);
+  cursor: pointer;
   scale: 1.05;
 }
 
@@ -87,14 +92,14 @@ a:hover {
 }
 
 .btn-primary {
-  background-color: var(--accent);
+  background-color: var(--accent) !important;
   border: none;
   border-radius: 25px;
   transition: 1s;
 }
 
 .btn-primary:hover {
-  background-color: var(--background);
+  background-color: var(--background) !important;
   scale: 1.1;
 }
 
@@ -134,6 +139,22 @@ a:hover {
   margin-bottom: 5px;
 }
 
+.ml-20 {
+  margin-left: 20px;
+}
+
+.mr-20 {
+  margin-right: 20px;
+}
+
+.mt-20 {
+  margin-top: 20px;
+}
+
+.mb-20 {
+  margin-bottom: 20px;
+}
+
 .mt-100 {
   margin-top: 100px;
 }
@@ -149,8 +170,12 @@ a:hover {
   border-bottom-left-radius: 20px;
 }
 
+.navbar-brand {
+  color: var(--white) !important;
+}
+
 .navbar-brand:hover {
-  color: var(--white);
+  color: var(--white) !important;
 }
 
 .dropdown-toggle {
@@ -195,7 +220,7 @@ a:hover {
 }
 
 .carousel-caption {
-  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  text-shadow: -1px 0 var(--black), 0 1px var(--black), 1px 0 var(--black), 0 -1px var(--black);
   padding: 20px;
   border-radius: 25px;
   top: 50%;
@@ -204,6 +229,37 @@ a:hover {
   left: 50%;
   transform: translate(-50%, -50%);
   right: initial;
+}
+
+.feature-heading {
+  padding: 50px;
+}
+
+.feature-box {
+  padding: 25px;
+  box-shadow: 3px 3px 10px var(--black);
+  border-radius: 25px;
+  background-color: var(--white);
+  height: 100%;
+  margin-left: 5px;
+  margin-right: 5px;
+  transition: 1s;
+}
+
+.feature-box:hover {
+  transform: scale(1.05);
+  cursor: pointer;
+}
+
+.icon-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  background: var(--black);
+  color: var(--white);
+  width: 50px;
+  height: 50px;
 }
 
 /* Activity details */
