--- a/src/index.css
+++ b/src/index.css
@@ -310,10 +310,24 @@ a:hover {
   height: 50px;
 }
 
-/* Activity details */
+/* Activities */
 .map {
   width: 100%;
   height: 400px;
+}
+
+.page-item.active .page-link {
+  color: var(--white);
+  border: var(--accent);
+  background-color: var(--accent);
+}
+
+.page-item.active:hover .page-link {
+  background-color: var(--background);
+}
+
+.page-item .page-link {
+  color: var(--accent);
 }
 
 /* Footer */
