chore: Update pagination styling and add start alignment

--- a/src/index.css
+++ b/src/index.css
@@ -316,6 +316,10 @@ a:hover {
   height: 400px;
 }
 
+.pagination {
+  justify-content: start !important;
+}
+
 .page-item.active .page-link {
   color: var(--white);
   border: var(--accent);
