--- a/src/index.css
+++ b/src/index.css
@@ -50,17 +50,21 @@ body {
   color: var(--white);
 }
 
-a {
+a.navbar-brand,
+a.link,
+a.page-link {
   text-decoration: none;
   color: var(--accent);
   transition: 1s;
 }
 
-a:hover {
+a.navbar-brand:hover,
+a.link:hover,
+a.page-link:hover {
   text-decoration: underline;
   color: var(--background);
   cursor: pointer;
-  scale: 1.05;
+  transform: scale(1.05);
 }
 
 .bg-hoge-vucht {
@@ -164,6 +168,10 @@ a:hover {
 
 .mt-100 {
   margin-top: 100px;
+}
+
+img {
+  user-select: none;
 }
 
 .no-user-select {
@@ -313,7 +321,12 @@ a:hover {
 /* Activities */
 .map {
   width: 100%;
-  height: 400px;
+  min-height: 200px;
+}
+
+.details-image {
+  height: fit-content;
+  border-radius: 25px;
 }
 
 .pagination {
@@ -332,6 +345,11 @@ a:hover {
 
 .page-item .page-link {
   color: var(--accent);
+}
+
+.card-box {
+  text-decoration: none;
+  color: var(--black);
 }
 
 /* Footer */
